# vscode-cpp

./: .gitignore  CMakeLists.txt  README.md  keybindings.json
script/: start_lldb_server_remote_android.sh
src/: hello_world.cc
test/: app-debug.apk
test/NdkDebug/app/src/main/cpp/: native-lib.cpp
